# rag_school

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: schemas.py
backend/app/api/routes/: __init__.py  chat.py  documents.py  faq.py  health.py  ingest.py  kb_files.py
backend/app/core/: chat_history.py  config.py  database.py  documents.py  models.py  utils.py
backend/app/data/: chunking.py  ingest.py  loader.py
backend/app/file_management/: __init__.py  milvus_store.py  service.py
backend/app/query_understanding/: faq_matcher.py  history_resolver.py  rewrite.py  router.py
backend/app/retrieval/: embedding.py  hybrid_ranker.py  milvus_client.py  pipeline.py  reranker.py
backend/app/workflow/: graph.py  llm_client.py  state.py
backend/app/workflow/nodes/: answer.py  executor.py  preprocess.py  query_route.py  retrieval.py  rule_match.py
backend/scripts/: check_connectivity.py  create_child_chunks_collection.py  seed_faq_rules.py
docker/mysql/: create_chat_conversation.sql  create_kb_document.sql  init.sql
docs/: API.md  DEPLOY.md
frontend/: next.config.js  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ChatInterface.tsx  FileManager.tsx  MessageList.tsx
